@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<registry>
+    <records interface="medialog.controlpanel.interfaces.IMedialogControlpanelSettings" purge="True">
+ 
+    </records>
+</registry>
+ 
