@@ -5,6 +5,8 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
+- Added a GenericSetup Uninstall profile [macagua]
+
 - Added Spanish translation [macagua]
 
 - Enabled the i18n support [macagua]
